deploy: b3fb3b8e242f2905e2685e9c65c5f792ccfbb9e1

--- a/nodesnim/nodes2d/node2d.html
+++ b/nodesnim/nodes2d/node2d.html
@@ -109,6 +109,8 @@ function main() {
       <li><a class="reference" href="#Node2DObj"
     title="Node2DObj = object of CanvasObj
   centered*: bool
+  rotation*: float
+  scale*: Vector2Ref
   timed_position*: Vector2Ref"><wbr />Node2DObj<span class="attachedType"></span></a></li>
   <li><a class="reference" href="#Node2DPtr"
     title="Node2DPtr = ptr Node2DObj"><wbr />Node2DPtr<span class="attachedType"></span></a></li>
@@ -170,6 +172,8 @@ function main() {
 <a id="Node2DObj"></a>
 <dt><pre><a href="node2d.html#Node2DObj"><span class="Identifier">Node2DObj</span></a> <span class="Other">=</span> <span class="Keyword">object</span> <span class="Keyword">of</span> <a href="../nodes/canvas.html#CanvasObj"><span class="Identifier">CanvasObj</span></a>
   <span class="Identifier">centered</span><span class="Operator">*</span><span class="Other">:</span> <span class="Identifier">bool</span>
+  <span class="Identifier">rotation</span><span class="Operator">*</span><span class="Other">:</span> <span class="Identifier">float</span>
+  <span class="Identifier">scale</span><span class="Operator">*</span><span class="Other">:</span> <a href="../core/vector2.html#Vector2Ref"><span class="Identifier">Vector2Ref</span></a>
   <span class="Identifier">timed_position</span><span class="Operator">*</span><span class="Other">:</span> <a href="../core/vector2.html#Vector2Ref"><span class="Identifier">Vector2Ref</span></a>
 </pre></dt>
 <dd>
@@ -291,7 +295,7 @@ Changes Z index.
       <div class="twelve-columns footer">
         <span class="nim-sprite"></span>
         <br/>
-        <small style="color: var(--hint);">Made with Nim. Generated: 2020-06-03 17:16:21 UTC</small>
+        <small style="color: var(--hint);">Made with Nim. Generated: 2020-06-04 07:49:56 UTC</small>
       </div>
     </div>
   </div>
