--- a/nodesnim/nodes2d/camera2d.html
+++ b/nodesnim/nodes2d/camera2d.html
@@ -108,7 +108,8 @@ function main() {
   <ul class="simple simple-toc-section">
       <li><a class="reference" href="#Camera2DObj"
     title="Camera2DObj = object of Node2DObj
-  current*: bool
+  current*, smooth*: bool
+  smooth_speed*: float
   target*: NodePtr
   limit*: AnchorRef"><wbr />Camera2DObj<span class="attachedType"></span></a></li>
   <li><a class="reference" href="#Camera2DPtr"
@@ -129,8 +130,16 @@ function main() {
 <li>
   <a class="reference reference-toplevel" href="#14" id="64">Methods</a>
   <ul class="simple simple-toc-section">
-      <li><a class="reference" href="#draw.e%2CCamera2DPtr%2CGLfloat%2CGLfloat"
+      <li><a class="reference" href="#changeTarget.e%2CCamera2DPtr%2CNodePtr"
+    title="changeTarget(self: Camera2DPtr; target: NodePtr)"><wbr />change<wbr />Target<span class="attachedType">Camera2DPtr</span></a></li>
+  <li><a class="reference" href="#changeSmoothSpeed.e%2CCamera2DPtr%2Cfloat"
+    title="changeSmoothSpeed(self: Camera2DPtr; speed: float)"><wbr />change<wbr />Smooth<wbr />Speed<span class="attachedType">Camera2DPtr</span></a></li>
+  <li><a class="reference" href="#disableSmooth.e%2CCamera2DPtr"
+    title="disableSmooth(self: Camera2DPtr)"><wbr />disable<wbr />Smooth<span class="attachedType">Camera2DPtr</span></a></li>
+  <li><a class="reference" href="#draw.e%2CCamera2DPtr%2CGLfloat%2CGLfloat"
     title="draw(self: Camera2DPtr; w, h: GLfloat)"><wbr />draw<span class="attachedType">Camera2DPtr</span></a></li>
+  <li><a class="reference" href="#enableSmooth.e%2CCamera2DPtr%2Cfloat"
+    title="enableSmooth(self: Camera2DPtr; speed: float = 0.1)"><wbr />enable<wbr />Smooth<span class="attachedType">Camera2DPtr</span></a></li>
   <li><a class="reference" href="#setCurrent.e%2CCamera2DPtr"
     title="setCurrent(self: Camera2DPtr)"><wbr />set<wbr />Current<span class="attachedType">Camera2DPtr</span></a></li>
   <li><a class="reference" href="#setLimit.e%2CCamera2DPtr%2Cfloat%2Cfloat%2Cfloat%2Cfloat"
@@ -160,7 +169,8 @@ function main() {
 <dl class="item">
 <a id="Camera2DObj"></a>
 <dt><pre><a href="camera2d.html#Camera2DObj"><span class="Identifier">Camera2DObj</span></a> <span class="Other">=</span> <span class="Keyword">object</span> <span class="Keyword">of</span> <a href="node2d.html#Node2DObj"><span class="Identifier">Node2DObj</span></a>
-  <span class="Identifier">current</span><span class="Operator">*</span><span class="Other">:</span> <span class="Identifier">bool</span>
+  <span class="Identifier">current</span><span class="Operator">*</span><span class="Other">,</span> <span class="Identifier">smooth</span><span class="Operator">*</span><span class="Other">:</span> <span class="Identifier">bool</span>
+  <span class="Identifier">smooth_speed</span><span class="Operator">*</span><span class="Other">:</span> <span class="Identifier">float</span>
   <span class="Identifier">target</span><span class="Operator">*</span><span class="Other">:</span> <a href="../nodes/node.html#NodePtr"><span class="Identifier">NodePtr</span></a>
   <span class="Identifier">limit</span><span class="Operator">*</span><span class="Other">:</span> <a href="../core/anchor.html#AnchorRef"><span class="Identifier">AnchorRef</span></a>
 </pre></dt>
@@ -218,11 +228,47 @@ function main() {
 <div class="section" id="14">
 <h1><a class="toc-backref" href="#14">Methods</a></h1>
 <dl class="item">
+<a id="changeTarget.e,Camera2DPtr,NodePtr"></a>
+<dt><pre><span class="Keyword">method</span> <a href="#changeTarget.e%2CCamera2DPtr%2CNodePtr"><span class="Identifier">changeTarget</span></a><span class="Other">(</span><span class="Identifier">self</span><span class="Other">:</span> <a href="camera2d.html#Camera2DPtr"><span class="Identifier">Camera2DPtr</span></a><span class="Other">;</span> <span class="Identifier">target</span><span class="Other">:</span> <a href="../nodes/node.html#NodePtr"><span class="Identifier">NodePtr</span></a><span class="Other">)</span> <span><span class="Other">{</span><span class="Other pragmadots">...</span><span class="Other">}</span></span><span class="pragmawrap"><span class="Other">{.</span><span class="pragma"><span class="Identifier">base</span><span class="Other">,</span> <span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></span><span class="Other">.}</span></span></pre></dt>
+<dd>
+
+Changes camera target (without camera position.)
+
+</dd>
+<a id="changeSmoothSpeed.e,Camera2DPtr,float"></a>
+<dt><pre><span class="Keyword">method</span> <a href="#changeSmoothSpeed.e%2CCamera2DPtr%2Cfloat"><span class="Identifier">changeSmoothSpeed</span></a><span class="Other">(</span><span class="Identifier">self</span><span class="Other">:</span> <a href="camera2d.html#Camera2DPtr"><span class="Identifier">Camera2DPtr</span></a><span class="Other">;</span> <span class="Identifier">speed</span><span class="Other">:</span> <span class="Identifier">float</span><span class="Other">)</span> <span><span class="Other">{</span><span class="Other pragmadots">...</span><span class="Other">}</span></span><span class="pragmawrap"><span class="Other">{.</span><span class="pragma"><span class="Identifier">base</span><span class="Other">,</span> <span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></span><span class="Other">.}</span></span></pre></dt>
+<dd>
+
+<p>Changes camera smooth speed.</p>
+<p>Arguments:</p>
+<ul class="simple"><li><tt class="docutils literal"><span class="pre">speed</span></tt> is a smooth speed. The closer to 0, the smoother the camera. The default is 0.1.</li>
+</ul>
+
+
+</dd>
+<a id="disableSmooth.e,Camera2DPtr"></a>
+<dt><pre><span class="Keyword">method</span> <a href="#disableSmooth.e%2CCamera2DPtr"><span class="Identifier">disableSmooth</span></a><span class="Other">(</span><span class="Identifier">self</span><span class="Other">:</span> <a href="camera2d.html#Camera2DPtr"><span class="Identifier">Camera2DPtr</span></a><span class="Other">)</span> <span><span class="Other">{</span><span class="Other pragmadots">...</span><span class="Other">}</span></span><span class="pragmawrap"><span class="Other">{.</span><span class="pragma"><span class="Identifier">base</span><span class="Other">,</span> <span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></span><span class="Other">.}</span></span></pre></dt>
+<dd>
+
+Disables smooth mode.
+
+</dd>
 <a id="draw.e,Camera2DPtr,GLfloat,GLfloat"></a>
 <dt><pre><span class="Keyword">method</span> <a href="#draw.e%2CCamera2DPtr%2CGLfloat%2CGLfloat"><span class="Identifier">draw</span></a><span class="Other">(</span><span class="Identifier">self</span><span class="Other">:</span> <a href="camera2d.html#Camera2DPtr"><span class="Identifier">Camera2DPtr</span></a><span class="Other">;</span> <span class="Identifier">w</span><span class="Other">,</span> <span class="Identifier">h</span><span class="Other">:</span> <a href="../thirdparty/opengl.html#GLfloat"><span class="Identifier">GLfloat</span></a><span class="Other">)</span> <span><span class="Other">{</span><span class="Other pragmadots">...</span><span class="Other">}</span></span><span class="pragmawrap"><span class="Other">{.</span><span class="pragma"><span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></span><span class="Other">.}</span></span></pre></dt>
 <dd>
 
 this method uses in the <tt class="docutils literal"><span class="pre">window.nim</span></tt>.
+
+</dd>
+<a id="enableSmooth.e,Camera2DPtr,float"></a>
+<dt><pre><span class="Keyword">method</span> <a href="#enableSmooth.e%2CCamera2DPtr%2Cfloat"><span class="Identifier">enableSmooth</span></a><span class="Other">(</span><span class="Identifier">self</span><span class="Other">:</span> <a href="camera2d.html#Camera2DPtr"><span class="Identifier">Camera2DPtr</span></a><span class="Other">;</span> <span class="Identifier">speed</span><span class="Other">:</span> <span class="Identifier">float</span> <span class="Other">=</span> <span class="FloatNumber">0.1</span><span class="Other">)</span> <span><span class="Other">{</span><span class="Other pragmadots">...</span><span class="Other">}</span></span><span class="pragmawrap"><span class="Other">{.</span><span class="pragma"><span class="Identifier">base</span><span class="Other">,</span> <span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></span><span class="Other">.}</span></span></pre></dt>
+<dd>
+
+<p>Enables camera smooth mode.</p>
+<p>Arguments:</p>
+<ul class="simple"><li><tt class="docutils literal"><span class="pre">speed</span></tt> is a smooth speed. The closer to 0, the smoother the camera. The default is 0.1.</li>
+</ul>
+
 
 </dd>
 <a id="setCurrent.e,Camera2DPtr"></a>
@@ -263,7 +309,7 @@ Changes camera target node.
       <div class="twelve-columns footer">
         <span class="nim-sprite"></span>
         <br/>
-        <small style="color: var(--hint);">Made with Nim. Generated: 2020-06-06 12:11:44 UTC</small>
+        <small style="color: var(--hint);">Made with Nim. Generated: 2020-06-06 13:43:12 UTC</small>
       </div>
     </div>
   </div>
