--- a/nodesnim/core/audio_stream.html
+++ b/nodesnim/core/audio_stream.html
@@ -107,7 +107,7 @@ function main() {
   <a class="reference reference-toplevel" href="#7" id="57">Types</a>
   <ul class="simple simple-toc-section">
       <li><a class="reference" href="#AudioStreamRef"
-    title="AudioStreamRef = ref object
+    title="AudioStreamRef = ref object of RootObj
   chunk*: ptr Chunk
   channel*: cint
   loop*: bool"><wbr />Audio<wbr />Stream<wbr />Ref<span class="attachedType"></span></a></li>
@@ -139,7 +139,7 @@ function main() {
 <h1><a class="toc-backref" href="#7">Types</a></h1>
 <dl class="item">
 <a id="AudioStreamRef"></a>
-<dt><pre><a href="audio_stream.html#AudioStreamRef"><span class="Identifier">AudioStreamRef</span></a> <span class="Other">=</span> <span class="Keyword">ref</span> <span class="Keyword">object</span>
+<dt><pre><a href="audio_stream.html#AudioStreamRef"><span class="Identifier">AudioStreamRef</span></a> <span class="Other">=</span> <span class="Keyword">ref</span> <span class="Keyword">object</span> <span class="Keyword">of</span> <span class="Identifier">RootObj</span>
   <span class="Identifier">chunk</span><span class="Operator">*</span><span class="Other">:</span> <span class="Keyword">ptr</span> <a href="../thirdparty/sdl2/mixer.html#Chunk"><span class="Identifier">Chunk</span></a>
   <span class="Identifier">channel</span><span class="Operator">*</span><span class="Other">:</span> <span class="Identifier">cint</span>
   <span class="Identifier">loop</span><span class="Operator">*</span><span class="Other">:</span> <span class="Identifier">bool</span>
@@ -175,7 +175,7 @@ function main() {
       <div class="twelve-columns footer">
         <span class="nim-sprite"></span>
         <br/>
-        <small style="color: var(--hint);">Made with Nim. Generated: 2020-06-06 15:07:23 UTC</small>
+        <small style="color: var(--hint);">Made with Nim. Generated: 2020-06-06 16:18:05 UTC</small>
       </div>
     </div>
   </div>
