--- a/nodesnim/core/image.html
+++ b/nodesnim/core/image.html
@@ -107,7 +107,7 @@ function main() {
   <a class="reference reference-toplevel" href="#7" id="57">Types</a>
   <ul class="simple simple-toc-section">
       <li><a class="reference" href="#GlTextureObj"
-    title="GlTextureObj = object
+    title="GlTextureObj = object of RootObj
   texture*: GLuint
   size*: Vector2Ref"><wbr />Gl<wbr />Texture<wbr />Obj<span class="attachedType"></span></a></li>
 
@@ -140,7 +140,7 @@ function main() {
 <h1><a class="toc-backref" href="#7">Types</a></h1>
 <dl class="item">
 <a id="GlTextureObj"></a>
-<dt><pre><a href="image.html#GlTextureObj"><span class="Identifier">GlTextureObj</span></a> <span class="Other">=</span> <span class="Keyword">object</span>
+<dt><pre><a href="image.html#GlTextureObj"><span class="Identifier">GlTextureObj</span></a> <span class="Other">=</span> <span class="Keyword">object</span> <span class="Keyword">of</span> <span class="Identifier">RootObj</span>
   <span class="Identifier">texture</span><span class="Operator">*</span><span class="Other">:</span> <a href="../thirdparty/opengl.html#GLuint"><span class="Identifier">GLuint</span></a>
   <span class="Identifier">size</span><span class="Operator">*</span><span class="Other">:</span> <a href="vector2.html#Vector2Ref"><span class="Identifier">Vector2Ref</span></a>
 </pre></dt>
@@ -188,7 +188,7 @@ function main() {
       <div class="twelve-columns footer">
         <span class="nim-sprite"></span>
         <br/>
-        <small style="color: var(--hint);">Made with Nim. Generated: 2020-06-06 15:07:22 UTC</small>
+        <small style="color: var(--hint);">Made with Nim. Generated: 2020-06-06 16:18:03 UTC</small>
       </div>
     </div>
   </div>
