--- a/nodesnim/nodes2d/ysort.html
+++ b/nodesnim/nodes2d/ysort.html
@@ -109,26 +109,26 @@ function main() {
       <li><a class="reference" href="#YSortObj"
     title="YSortObj = object of Node2DObj
   for_all_childs*: bool"><wbr />YSort<wbr />Obj<span class="attachedType"></span></a></li>
-  <li><a class="reference" href="#YSortPtr"
-    title="YSortPtr = ptr YSortObj"><wbr />YSort<wbr />Ptr<span class="attachedType"></span></a></li>
+  <li><a class="reference" href="#YSortRef"
+    title="YSortRef = ref YSortObj"><wbr />YSort<wbr />Ref<span class="attachedType"></span></a></li>
 
   </ul>
 </li>
 <li>
   <a class="reference reference-toplevel" href="#12" id="62">Procs</a>
   <ul class="simple simple-toc-section">
-      <li><a class="reference" href="#YSort%2Cstring%2CYSortObj"
-    title="YSort(name: string; variable: var YSortObj): YSortPtr"><wbr />YSort<span class="attachedType">YSortPtr</span></a></li>
-  <li><a class="reference" href="#YSort%2CYSortObj"
-    title="YSort(obj: var YSortObj): YSortPtr"><wbr />YSort<span class="attachedType">YSortObj</span></a></li>
+      <li><a class="reference" href="#YSort%2Cstring"
+    title="YSort(name: string = &quot;YSort&quot;): YSortRef"><wbr />YSort<span class="attachedType">YSortRef</span></a></li>
 
   </ul>
 </li>
 <li>
   <a class="reference reference-toplevel" href="#14" id="64">Methods</a>
   <ul class="simple simple-toc-section">
-      <li><a class="reference" href="#draw.e%2CYSortPtr%2CGLfloat%2CGLfloat"
-    title="draw(self: YSortPtr; w, h: GLfloat)"><wbr />draw<span class="attachedType">YSortPtr</span></a></li>
+      <li><a class="reference" href="#draw.e%2CYSortRef%2CGLfloat%2CGLfloat"
+    title="draw(self: YSortRef; w, h: GLfloat)"><wbr />draw<span class="attachedType">YSortRef</span></a></li>
+  <li><a class="reference" href="#duplicate.e%2CYSortRef"
+    title="duplicate(self: YSortRef): YSortRef"><wbr />duplicate<span class="attachedType">YSortRef</span></a></li>
 
   </ul>
 </li>
@@ -157,8 +157,8 @@ function main() {
 
 
 </dd>
-<a id="YSortPtr"></a>
-<dt><pre><a href="ysort.html#YSortPtr"><span class="Identifier">YSortPtr</span></a> <span class="Other">=</span> <span class="Keyword">ptr</span> <a href="ysort.html#YSortObj"><span class="Identifier">YSortObj</span></a></pre></dt>
+<a id="YSortRef"></a>
+<dt><pre><a href="ysort.html#YSortRef"><span class="Identifier">YSortRef</span></a> <span class="Other">=</span> <span class="Keyword">ref</span> <a href="ysort.html#YSortObj"><span class="Identifier">YSortObj</span></a></pre></dt>
 <dd>
 
 
@@ -169,35 +169,17 @@ function main() {
 <div class="section" id="12">
 <h1><a class="toc-backref" href="#12">Procs</a></h1>
 <dl class="item">
-<a id="YSort,string,YSortObj"></a>
-<dt><pre><span class="Keyword">proc</span> <a href="#YSort%2Cstring%2CYSortObj"><span class="Identifier">YSort</span></a><span class="Other">(</span><span class="Identifier">name</span><span class="Other">:</span> <span class="Identifier">string</span><span class="Other">;</span> <span class="Identifier">variable</span><span class="Other">:</span> <span class="Keyword">var</span> <a href="ysort.html#YSortObj"><span class="Identifier">YSortObj</span></a><span class="Other">)</span><span class="Other">:</span> <a href="ysort.html#YSortPtr"><span class="Identifier">YSortPtr</span></a> <span><span class="Other">{</span><span class="Other pragmadots">...</span><span class="Other">}</span></span><span class="pragmawrap"><span class="Other">{.</span><span class="pragma"><span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></span><span class="Other">.}</span></span></pre></dt>
+<a id="YSort,string"></a>
+<dt><pre><span class="Keyword">proc</span> <a href="#YSort%2Cstring"><span class="Identifier">YSort</span></a><span class="Other">(</span><span class="Identifier">name</span><span class="Other">:</span> <span class="Identifier">string</span> <span class="Other">=</span> <span class="StringLit">&quot;YSort&quot;</span><span class="Other">)</span><span class="Other">:</span> <a href="ysort.html#YSortRef"><span class="Identifier">YSortRef</span></a> <span><span class="Other">{</span><span class="Other pragmadots">...</span><span class="Other">}</span></span><span class="pragmawrap"><span class="Other">{.</span><span class="pragma"><span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></span><span class="Other">.}</span></span></pre></dt>
 <dd>
 
-<p>Creates a new YSort pointer.</p>
+<p>Creates a new YSort.</p>
 <p>Arguments:</p>
 <ul class="simple"><li><tt class="docutils literal"><span class="pre">name</span></tt> is a node name.</li>
-<li><tt class="docutils literal"><span class="pre">variable</span></tt> is a YSortObj variable.</li>
 </ul>
 
 <p><strong class="examples_text">Examples:</strong></p>
-<pre class="listing"><span class="Keyword">var</span>
-  <span class="Identifier">node_obj</span><span class="Other">:</span> <span class="Identifier">YSortObj</span>
-  <span class="Identifier">node</span> <span class="Other">=</span> <span class="Identifier">YSort</span><span class="Other">(</span><span class="StringLit">&quot;YSort&quot;</span><span class="Other">,</span> <span class="Identifier">node_obj</span><span class="Other">)</span></pre>
-
-</dd>
-<a id="YSort,YSortObj"></a>
-<dt><pre><span class="Keyword">proc</span> <a href="#YSort%2CYSortObj"><span class="Identifier">YSort</span></a><span class="Other">(</span><span class="Identifier">obj</span><span class="Other">:</span> <span class="Keyword">var</span> <a href="ysort.html#YSortObj"><span class="Identifier">YSortObj</span></a><span class="Other">)</span><span class="Other">:</span> <a href="ysort.html#YSortPtr"><span class="Identifier">YSortPtr</span></a> <span><span class="Other">{</span><span class="Other pragmadots">...</span><span class="Other">}</span></span><span class="pragmawrap"><span class="Other">{.</span><span class="pragma"><span class="Identifier">inline</span><span class="Other">,</span> <span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></span><span class="Other">.}</span></span></pre></dt>
-<dd>
-
-<p>Creates a new YSort pointer with deffault node name &quot;YSort&quot;.</p>
-<p>Arguments:</p>
-<ul class="simple"><li><tt class="docutils literal"><span class="pre">variable</span></tt> is a YSortObj variable.</li>
-</ul>
-
-<p><strong class="examples_text">Examples:</strong></p>
-<pre class="listing"><span class="Keyword">var</span>
-  <span class="Identifier">node_obj</span><span class="Other">:</span> <span class="Identifier">YSortObj</span>
-  <span class="Identifier">node</span> <span class="Other">=</span> <span class="Identifier">YSort</span><span class="Other">(</span><span class="Identifier">node_obj</span><span class="Other">)</span></pre>
+<pre class="listing"><span class="Keyword">var</span> <span class="Identifier">node</span> <span class="Other">=</span> <span class="Identifier">YSort</span><span class="Other">(</span><span class="StringLit">&quot;YSort&quot;</span><span class="Other">)</span></pre>
 
 </dd>
 
@@ -205,11 +187,18 @@ function main() {
 <div class="section" id="14">
 <h1><a class="toc-backref" href="#14">Methods</a></h1>
 <dl class="item">
-<a id="draw.e,YSortPtr,GLfloat,GLfloat"></a>
-<dt><pre><span class="Keyword">method</span> <a href="#draw.e%2CYSortPtr%2CGLfloat%2CGLfloat"><span class="Identifier">draw</span></a><span class="Other">(</span><span class="Identifier">self</span><span class="Other">:</span> <a href="ysort.html#YSortPtr"><span class="Identifier">YSortPtr</span></a><span class="Other">;</span> <span class="Identifier">w</span><span class="Other">,</span> <span class="Identifier">h</span><span class="Other">:</span> <a href="../thirdparty/opengl.html#GLfloat"><span class="Identifier">GLfloat</span></a><span class="Other">)</span> <span><span class="Other">{</span><span class="Other pragmadots">...</span><span class="Other">}</span></span><span class="pragmawrap"><span class="Other">{.</span><span class="pragma"><span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Identifier">Exception</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Identifier">RootEffect</span><span class="Other">]</span></span><span class="Other">.}</span></span></pre></dt>
+<a id="draw.e,YSortRef,GLfloat,GLfloat"></a>
+<dt><pre><span class="Keyword">method</span> <a href="#draw.e%2CYSortRef%2CGLfloat%2CGLfloat"><span class="Identifier">draw</span></a><span class="Other">(</span><span class="Identifier">self</span><span class="Other">:</span> <a href="ysort.html#YSortRef"><span class="Identifier">YSortRef</span></a><span class="Other">;</span> <span class="Identifier">w</span><span class="Other">,</span> <span class="Identifier">h</span><span class="Other">:</span> <a href="../thirdparty/opengl.html#GLfloat"><span class="Identifier">GLfloat</span></a><span class="Other">)</span> <span><span class="Other">{</span><span class="Other pragmadots">...</span><span class="Other">}</span></span><span class="pragmawrap"><span class="Other">{.</span><span class="pragma"><span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Identifier">Exception</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Identifier">RootEffect</span><span class="Other">]</span></span><span class="Other">.}</span></span></pre></dt>
 <dd>
 
 this method uses in the <tt class="docutils literal"><span class="pre">window.nim</span></tt>.
+
+</dd>
+<a id="duplicate.e,YSortRef"></a>
+<dt><pre><span class="Keyword">method</span> <a href="#duplicate.e%2CYSortRef"><span class="Identifier">duplicate</span></a><span class="Other">(</span><span class="Identifier">self</span><span class="Other">:</span> <a href="ysort.html#YSortRef"><span class="Identifier">YSortRef</span></a><span class="Other">)</span><span class="Other">:</span> <a href="ysort.html#YSortRef"><span class="Identifier">YSortRef</span></a> <span><span class="Other">{</span><span class="Other pragmadots">...</span><span class="Other">}</span></span><span class="pragmawrap"><span class="Other">{.</span><span class="pragma"><span class="Identifier">base</span><span class="Other">,</span> <span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></span><span class="Other">.}</span></span></pre></dt>
+<dd>
+
+Duplicates YSort and create a new YSort object.
 
 </dd>
 
@@ -222,7 +211,7 @@ this method uses in the <tt class="docutils literal"><span class="pre">window.ni
       <div class="twelve-columns footer">
         <span class="nim-sprite"></span>
         <br/>
-        <small style="color: var(--hint);">Made with Nim. Generated: 2020-06-07 07:42:26 UTC</small>
+        <small style="color: var(--hint);">Made with Nim. Generated: 2020-06-07 17:07:18 UTC</small>
       </div>
     </div>
   </div>
