--- a/nodesnim/nodescontrol/button.html
+++ b/nodesnim/nodescontrol/button.html
@@ -116,31 +116,29 @@ function main() {
   normal_color*: ColorRef      ## text color, whenwhen button is not pressed and not hovered.
   hover_color*: ColorRef       ## text color, when button hovered.
   press_color*: ColorRef       ## text color, when button pressed.
-  on_touch*: proc (self: ButtonPtr; x, y: float): void ## This called, when user clicks on button."><wbr />Button<wbr />Obj<span class="attachedType"></span></a></li>
-  <li><a class="reference" href="#ButtonPtr"
-    title="ButtonPtr = ptr ButtonObj"><wbr />Button<wbr />Ptr<span class="attachedType"></span></a></li>
+  on_touch*: proc (self: ButtonRef; x, y: float): void ## This called, when user clicks on button."><wbr />Button<wbr />Obj<span class="attachedType"></span></a></li>
+  <li><a class="reference" href="#ButtonRef"
+    title="ButtonRef = ref ButtonObj"><wbr />Button<wbr />Ref<span class="attachedType"></span></a></li>
 
   </ul>
 </li>
 <li>
   <a class="reference reference-toplevel" href="#12" id="62">Procs</a>
   <ul class="simple simple-toc-section">
-      <li><a class="reference" href="#Button%2Cstring%2CButtonObj"
-    title="Button(name: string; variable: var ButtonObj): ButtonPtr"><wbr />Button<span class="attachedType">ButtonPtr</span></a></li>
-  <li><a class="reference" href="#Button%2CButtonObj"
-    title="Button(obj: var ButtonObj): ButtonPtr"><wbr />Button<span class="attachedType">ButtonObj</span></a></li>
+      <li><a class="reference" href="#Button%2Cstring"
+    title="Button(name: string = &quot;Button&quot;): ButtonRef"><wbr />Button<span class="attachedType">ButtonRef</span></a></li>
 
   </ul>
 </li>
 <li>
   <a class="reference reference-toplevel" href="#14" id="64">Methods</a>
   <ul class="simple simple-toc-section">
-      <li><a class="reference" href="#draw.e%2CButtonPtr%2CGLfloat%2CGLfloat"
-    title="draw(self: ButtonPtr; w, h: GLfloat)"><wbr />draw<span class="attachedType">ButtonPtr</span></a></li>
-  <li><a class="reference" href="#duplicate.e%2CButtonPtr%2CButtonObj"
-    title="duplicate(self: ButtonPtr; obj: var ButtonObj): ButtonPtr"><wbr />duplicate<span class="attachedType">ButtonPtr</span></a></li>
-  <li><a class="reference" href="#handle.e%2CButtonPtr%2CInputEvent%2CNodePtr"
-    title="handle(self: ButtonPtr; event: InputEvent; mouse_on: var NodePtr)"><wbr />handle<span class="attachedType">ButtonPtr</span></a></li>
+      <li><a class="reference" href="#draw.e%2CButtonRef%2CGLfloat%2CGLfloat"
+    title="draw(self: ButtonRef; w, h: GLfloat)"><wbr />draw<span class="attachedType">ButtonRef</span></a></li>
+  <li><a class="reference" href="#duplicate.e%2CButtonRef%2CButtonObj"
+    title="duplicate(self: ButtonRef; obj: var ButtonObj): ButtonRef"><wbr />duplicate<span class="attachedType">ButtonRef</span></a></li>
+  <li><a class="reference" href="#handle.e%2CButtonRef%2CInputEvent%2CNodeRef"
+    title="handle(self: ButtonRef; event: InputEvent; mouse_on: var NodeRef)"><wbr />handle<span class="attachedType">ButtonRef</span></a></li>
 
   </ul>
 </li>
@@ -170,15 +168,15 @@ function main() {
   <span class="Identifier">normal_color</span><span class="Operator">*</span><span class="Other">:</span> <a href="../core/color.html#ColorRef"><span class="Identifier">ColorRef</span></a>      <span class="Comment">## text color, whenwhen button is not pressed and not hovered.</span>
   <span class="Identifier">hover_color</span><span class="Operator">*</span><span class="Other">:</span> <a href="../core/color.html#ColorRef"><span class="Identifier">ColorRef</span></a>       <span class="Comment">## text color, when button hovered.</span>
   <span class="Identifier">press_color</span><span class="Operator">*</span><span class="Other">:</span> <a href="../core/color.html#ColorRef"><span class="Identifier">ColorRef</span></a>       <span class="Comment">## text color, when button pressed.</span>
-  <span class="Identifier">on_touch</span><span class="Operator">*</span><span class="Other">:</span> <span class="Keyword">proc</span> <span class="Other">(</span><span class="Identifier">self</span><span class="Other">:</span> <a href="button.html#ButtonPtr"><span class="Identifier">ButtonPtr</span></a><span class="Other">;</span> <span class="Identifier">x</span><span class="Other">,</span> <span class="Identifier">y</span><span class="Other">:</span> <span class="Identifier">float</span><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">void</span> <span class="Comment">## This called, when user clicks on button.</span>
+  <span class="Identifier">on_touch</span><span class="Operator">*</span><span class="Other">:</span> <span class="Keyword">proc</span> <span class="Other">(</span><span class="Identifier">self</span><span class="Other">:</span> <a href="button.html#ButtonRef"><span class="Identifier">ButtonRef</span></a><span class="Other">;</span> <span class="Identifier">x</span><span class="Other">,</span> <span class="Identifier">y</span><span class="Other">:</span> <span class="Identifier">float</span><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">void</span> <span class="Comment">## This called, when user clicks on button.</span>
   </pre></dt>
 <dd>
 
 
 
 </dd>
-<a id="ButtonPtr"></a>
-<dt><pre><a href="button.html#ButtonPtr"><span class="Identifier">ButtonPtr</span></a> <span class="Other">=</span> <span class="Keyword">ptr</span> <a href="button.html#ButtonObj"><span class="Identifier">ButtonObj</span></a></pre></dt>
+<a id="ButtonRef"></a>
+<dt><pre><a href="button.html#ButtonRef"><span class="Identifier">ButtonRef</span></a> <span class="Other">=</span> <span class="Keyword">ref</span> <a href="button.html#ButtonObj"><span class="Identifier">ButtonObj</span></a></pre></dt>
 <dd>
 
 
@@ -189,35 +187,17 @@ function main() {
 <div class="section" id="12">
 <h1><a class="toc-backref" href="#12">Procs</a></h1>
 <dl class="item">
-<a id="Button,string,ButtonObj"></a>
-<dt><pre><span class="Keyword">proc</span> <a href="#Button%2Cstring%2CButtonObj"><span class="Identifier">Button</span></a><span class="Other">(</span><span class="Identifier">name</span><span class="Other">:</span> <span class="Identifier">string</span><span class="Other">;</span> <span class="Identifier">variable</span><span class="Other">:</span> <span class="Keyword">var</span> <a href="button.html#ButtonObj"><span class="Identifier">ButtonObj</span></a><span class="Other">)</span><span class="Other">:</span> <a href="button.html#ButtonPtr"><span class="Identifier">ButtonPtr</span></a> <span><span class="Other">{</span><span class="Other pragmadots">...</span><span class="Other">}</span></span><span class="pragmawrap"><span class="Other">{.</span><span class="pragma"><span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></span><span class="Other">.}</span></span></pre></dt>
+<a id="Button,string"></a>
+<dt><pre><span class="Keyword">proc</span> <a href="#Button%2Cstring"><span class="Identifier">Button</span></a><span class="Other">(</span><span class="Identifier">name</span><span class="Other">:</span> <span class="Identifier">string</span> <span class="Other">=</span> <span class="StringLit">&quot;Button&quot;</span><span class="Other">)</span><span class="Other">:</span> <a href="button.html#ButtonRef"><span class="Identifier">ButtonRef</span></a> <span><span class="Other">{</span><span class="Other pragmadots">...</span><span class="Other">}</span></span><span class="pragmawrap"><span class="Other">{.</span><span class="pragma"><span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></span><span class="Other">.}</span></span></pre></dt>
 <dd>
 
-<p>Creates a new Button node pointer.</p>
+<p>Creates a new Button node.</p>
 <p>Arguments:</p>
 <ul class="simple"><li><tt class="docutils literal"><span class="pre">name</span></tt> is a node name.</li>
-<li><tt class="docutils literal"><span class="pre">variable</span></tt> is a ButtonObj variable.</li>
 </ul>
 
 <p><strong class="examples_text">Examples:</strong></p>
-<pre class="listing"><span class="Keyword">var</span>
-  <span class="Identifier">my_button_obj</span><span class="Other">:</span> <span class="Identifier">ButtonObj</span>
-  <span class="Identifier">my_button</span> <span class="Other">=</span> <span class="Identifier">Button</span><span class="Other">(</span><span class="StringLit">&quot;Button&quot;</span><span class="Other">,</span> <span class="Identifier">my_button_obj</span><span class="Other">)</span></pre>
-
-</dd>
-<a id="Button,ButtonObj"></a>
-<dt><pre><span class="Keyword">proc</span> <a href="#Button%2CButtonObj"><span class="Identifier">Button</span></a><span class="Other">(</span><span class="Identifier">obj</span><span class="Other">:</span> <span class="Keyword">var</span> <a href="button.html#ButtonObj"><span class="Identifier">ButtonObj</span></a><span class="Other">)</span><span class="Other">:</span> <a href="button.html#ButtonPtr"><span class="Identifier">ButtonPtr</span></a> <span><span class="Other">{</span><span class="Other pragmadots">...</span><span class="Other">}</span></span><span class="pragmawrap"><span class="Other">{.</span><span class="pragma"><span class="Identifier">inline</span><span class="Other">,</span> <span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></span><span class="Other">.}</span></span></pre></dt>
-<dd>
-
-<p>Creates a new Button node pointer with default node name &quot;Button&quot;.</p>
-<p>Arguments:</p>
-<ul class="simple"><li><tt class="docutils literal"><span class="pre">variable</span></tt> is a ButtonObj variable.</li>
-</ul>
-
-<p><strong class="examples_text">Examples:</strong></p>
-<pre class="listing"><span class="Keyword">var</span>
-  <span class="Identifier">my_button_obj</span><span class="Other">:</span> <span class="Identifier">ButtonObj</span>
-  <span class="Identifier">my_button</span> <span class="Other">=</span> <span class="Identifier">Button</span><span class="Other">(</span><span class="Identifier">my_button_obj</span><span class="Other">)</span></pre>
+<pre class="listing"><span class="Keyword">var</span> <span class="Identifier">my_button</span> <span class="Other">=</span> <span class="Identifier">Button</span><span class="Other">(</span><span class="StringLit">&quot;Button&quot;</span><span class="Other">)</span></pre>
 
 </dd>
 
@@ -225,24 +205,24 @@ function main() {
 <div class="section" id="14">
 <h1><a class="toc-backref" href="#14">Methods</a></h1>
 <dl class="item">
-<a id="draw.e,ButtonPtr,GLfloat,GLfloat"></a>
-<dt><pre><span class="Keyword">method</span> <a href="#draw.e%2CButtonPtr%2CGLfloat%2CGLfloat"><span class="Identifier">draw</span></a><span class="Other">(</span><span class="Identifier">self</span><span class="Other">:</span> <a href="button.html#ButtonPtr"><span class="Identifier">ButtonPtr</span></a><span class="Other">;</span> <span class="Identifier">w</span><span class="Other">,</span> <span class="Identifier">h</span><span class="Other">:</span> <a href="../thirdparty/opengl.html#GLfloat"><span class="Identifier">GLfloat</span></a><span class="Other">)</span> <span><span class="Other">{</span><span class="Other pragmadots">...</span><span class="Other">}</span></span><span class="pragmawrap"><span class="Other">{.</span><span class="pragma"><span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Identifier">GLerror</span><span class="Other">,</span> <span class="Identifier">Exception</span><span class="Other">]</span><span class="Other">,</span>
+<a id="draw.e,ButtonRef,GLfloat,GLfloat"></a>
+<dt><pre><span class="Keyword">method</span> <a href="#draw.e%2CButtonRef%2CGLfloat%2CGLfloat"><span class="Identifier">draw</span></a><span class="Other">(</span><span class="Identifier">self</span><span class="Other">:</span> <a href="button.html#ButtonRef"><span class="Identifier">ButtonRef</span></a><span class="Other">;</span> <span class="Identifier">w</span><span class="Other">,</span> <span class="Identifier">h</span><span class="Other">:</span> <a href="../thirdparty/opengl.html#GLfloat"><span class="Identifier">GLfloat</span></a><span class="Other">)</span> <span><span class="Other">{</span><span class="Other pragmadots">...</span><span class="Other">}</span></span><span class="pragmawrap"><span class="Other">{.</span><span class="pragma"><span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Identifier">GLerror</span><span class="Other">,</span> <span class="Identifier">Exception</span><span class="Other">]</span><span class="Other">,</span>
                                         <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Identifier">RootEffect</span><span class="Other">]</span></span><span class="Other">.}</span></span></pre></dt>
 <dd>
 
 this method uses in the <tt class="docutils literal"><span class="pre">window.nim</span></tt>.
 
 </dd>
-<a id="duplicate.e,ButtonPtr,ButtonObj"></a>
-<dt><pre><span class="Keyword">method</span> <a href="#duplicate.e%2CButtonPtr%2CButtonObj"><span class="Identifier">duplicate</span></a><span class="Other">(</span><span class="Identifier">self</span><span class="Other">:</span> <a href="button.html#ButtonPtr"><span class="Identifier">ButtonPtr</span></a><span class="Other">;</span> <span class="Identifier">obj</span><span class="Other">:</span> <span class="Keyword">var</span> <a href="button.html#ButtonObj"><span class="Identifier">ButtonObj</span></a><span class="Other">)</span><span class="Other">:</span> <a href="button.html#ButtonPtr"><span class="Identifier">ButtonPtr</span></a> <span><span class="Other">{</span><span class="Other pragmadots">...</span><span class="Other">}</span></span><span class="pragmawrap"><span class="Other">{.</span><span class="pragma"><span class="Identifier">base</span><span class="Other">,</span> <span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span>
+<a id="duplicate.e,ButtonRef,ButtonObj"></a>
+<dt><pre><span class="Keyword">method</span> <a href="#duplicate.e%2CButtonRef%2CButtonObj"><span class="Identifier">duplicate</span></a><span class="Other">(</span><span class="Identifier">self</span><span class="Other">:</span> <a href="button.html#ButtonRef"><span class="Identifier">ButtonRef</span></a><span class="Other">;</span> <span class="Identifier">obj</span><span class="Other">:</span> <span class="Keyword">var</span> <a href="button.html#ButtonObj"><span class="Identifier">ButtonObj</span></a><span class="Other">)</span><span class="Other">:</span> <a href="button.html#ButtonRef"><span class="Identifier">ButtonRef</span></a> <span><span class="Other">{</span><span class="Other pragmadots">...</span><span class="Other">}</span></span><span class="pragmawrap"><span class="Other">{.</span><span class="pragma"><span class="Identifier">base</span><span class="Other">,</span> <span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span>
     <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></span><span class="Other">.}</span></span></pre></dt>
 <dd>
 
 Duplicates Button object and creates a new Button node pointer.
 
 </dd>
-<a id="handle.e,ButtonPtr,InputEvent,NodePtr"></a>
-<dt><pre><span class="Keyword">method</span> <a href="#handle.e%2CButtonPtr%2CInputEvent%2CNodePtr"><span class="Identifier">handle</span></a><span class="Other">(</span><span class="Identifier">self</span><span class="Other">:</span> <a href="button.html#ButtonPtr"><span class="Identifier">ButtonPtr</span></a><span class="Other">;</span> <span class="Identifier">event</span><span class="Other">:</span> <a href="../core/input.html#InputEvent"><span class="Identifier">InputEvent</span></a><span class="Other">;</span> <span class="Identifier">mouse_on</span><span class="Other">:</span> <span class="Keyword">var</span> <a href="../nodes/node.html#NodePtr"><span class="Identifier">NodePtr</span></a><span class="Other">)</span> <span><span class="Other">{</span><span class="Other pragmadots">...</span><span class="Other">}</span></span><span class="pragmawrap"><span class="Other">{.</span><span class="pragma">
+<a id="handle.e,ButtonRef,InputEvent,NodeRef"></a>
+<dt><pre><span class="Keyword">method</span> <a href="#handle.e%2CButtonRef%2CInputEvent%2CNodeRef"><span class="Identifier">handle</span></a><span class="Other">(</span><span class="Identifier">self</span><span class="Other">:</span> <a href="button.html#ButtonRef"><span class="Identifier">ButtonRef</span></a><span class="Other">;</span> <span class="Identifier">event</span><span class="Other">:</span> <a href="../core/input.html#InputEvent"><span class="Identifier">InputEvent</span></a><span class="Other">;</span> <span class="Identifier">mouse_on</span><span class="Other">:</span> <span class="Keyword">var</span> <a href="../nodes/node.html#NodeRef"><span class="Identifier">NodeRef</span></a><span class="Other">)</span> <span><span class="Other">{</span><span class="Other pragmadots">...</span><span class="Other">}</span></span><span class="pragmawrap"><span class="Other">{.</span><span class="pragma">
     <span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Identifier">Exception</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Identifier">RootEffect</span><span class="Other">]</span></span><span class="Other">.}</span></span></pre></dt>
 <dd>
 
@@ -259,7 +239,7 @@ Handles user input. This uses in the <tt class="docutils literal"><span class="p
       <div class="twelve-columns footer">
         <span class="nim-sprite"></span>
         <br/>
-        <small style="color: var(--hint);">Made with Nim. Generated: 2020-06-07 07:41:48 UTC</small>
+        <small style="color: var(--hint);">Made with Nim. Generated: 2020-06-07 17:06:42 UTC</small>
       </div>
     </div>
   </div>
