--- a/nodesnim/core/enums.html
+++ b/nodesnim/core/enums.html
@@ -123,7 +123,10 @@ function main() {
   HBOX_NODE, LABEL_NODE, POPUP_NODE, PROGRESS_BAR_NODE, RICH_EDIT_TEXT_NODE,
   RICH_LABEL_NODE, SCROLL_NODE, SLIDER_NODE, TEXTURE_BUTTON_NODE,
   TEXTURE_PROGRESS_BAR_NODE, TEXTURE_RECT_NODE, VBOX_NODE, VPROGRESS_BAR_NODE,
-  VSLIDER_NODE, NODE_3D"><wbr />Node<wbr />Kind<span class="attachedType"></span></a></li>
+  VSLIDER_NODE, NODE3D_NODE"><wbr />Node<wbr />Kind<span class="attachedType"></span></a></li>
+  <li><a class="reference" href="#NodeTypes"
+    title="NodeTypes {.pure.} = enum
+  NODE_TYPE_DEFAULT, NODE_TYPE_CONTROL, NODE_TYPE_2D, NODE_TYPE_3D"><wbr />Node<wbr />Types<span class="attachedType"></span></a></li>
 
   </ul>
 </li>
@@ -176,7 +179,15 @@ function main() {
   <span class="Identifier">HBOX_NODE</span><span class="Other">,</span> <span class="Identifier">LABEL_NODE</span><span class="Other">,</span> <span class="Identifier">POPUP_NODE</span><span class="Other">,</span> <span class="Identifier">PROGRESS_BAR_NODE</span><span class="Other">,</span> <span class="Identifier">RICH_EDIT_TEXT_NODE</span><span class="Other">,</span>
   <span class="Identifier">RICH_LABEL_NODE</span><span class="Other">,</span> <span class="Identifier">SCROLL_NODE</span><span class="Other">,</span> <span class="Identifier">SLIDER_NODE</span><span class="Other">,</span> <span class="Identifier">TEXTURE_BUTTON_NODE</span><span class="Other">,</span>
   <span class="Identifier">TEXTURE_PROGRESS_BAR_NODE</span><span class="Other">,</span> <span class="Identifier">TEXTURE_RECT_NODE</span><span class="Other">,</span> <span class="Identifier">VBOX_NODE</span><span class="Other">,</span> <span class="Identifier">VPROGRESS_BAR_NODE</span><span class="Other">,</span>
-  <span class="Identifier">VSLIDER_NODE</span><span class="Other">,</span> <span class="Identifier">NODE_3D</span></pre></dt>
+  <span class="Identifier">VSLIDER_NODE</span><span class="Other">,</span> <span class="Identifier">NODE3D_NODE</span></pre></dt>
+<dd>
+
+
+
+</dd>
+<a id="NodeTypes"></a>
+<dt><pre><a href="enums.html#NodeTypes"><span class="Identifier">NodeTypes</span></a> <span><span class="Other">{</span><span class="Other pragmadots">...</span><span class="Other">}</span></span><span class="pragmawrap"><span class="Other">{.</span><span class="pragma"><span class="Identifier">pure</span></span><span class="Other">.}</span></span> <span class="Other">=</span> <span class="Keyword">enum</span>
+  <span class="Identifier">NODE_TYPE_DEFAULT</span><span class="Other">,</span> <span class="Identifier">NODE_TYPE_CONTROL</span><span class="Other">,</span> <span class="Identifier">NODE_TYPE_2D</span><span class="Other">,</span> <span class="Identifier">NODE_TYPE_3D</span></pre></dt>
 <dd>
 
 
@@ -192,7 +203,7 @@ function main() {
       <div class="twelve-columns footer">
         <span class="nim-sprite"></span>
         <br/>
-        <small style="color: var(--hint);">Made with Nim. Generated: 2020-06-07 18:44:36 UTC</small>
+        <small style="color: var(--hint);">Made with Nim. Generated: 2020-06-08 05:38:59 UTC</small>
       </div>
     </div>
   </div>
