deploy: 2757e03d44231226bcaf0ed70ce27e94a971c547

--- a/nodesnim/nodes/node.html
+++ b/nodesnim/nodes/node.html
@@ -110,7 +110,7 @@ function main() {
       <li><a class="reference" href="#NodeObj"
     title="NodeObj = object of RootObj
   kind*: NodeKind
-  node_type*: NodeTypes
+  type_of_node*: NodeTypes
   visible*: bool
   is_ready*: bool
   can_use_anchor*: bool
@@ -259,7 +259,7 @@ function main() {
 <a id="NodeObj"></a>
 <dt><pre><a href="node.html#NodeObj"><span class="Identifier">NodeObj</span></a> <span class="Other">=</span> <span class="Keyword">object</span> <span class="Keyword">of</span> <span class="Identifier">RootObj</span>
   <span class="Identifier">kind</span><span class="Operator">*</span><span class="Other">:</span> <a href="../core/enums.html#NodeKind"><span class="Identifier">NodeKind</span></a>
-  <span class="Identifier">node_type</span><span class="Operator">*</span><span class="Other">:</span> <a href="../core/enums.html#NodeTypes"><span class="Identifier">NodeTypes</span></a>
+  <span class="Identifier">type_of_node</span><span class="Operator">*</span><span class="Other">:</span> <a href="../core/enums.html#NodeTypes"><span class="Identifier">NodeTypes</span></a>
   <span class="Identifier">visible</span><span class="Operator">*</span><span class="Other">:</span> <span class="Identifier">bool</span>
   <span class="Identifier">is_ready</span><span class="Operator">*</span><span class="Other">:</span> <span class="Identifier">bool</span>
   <span class="Identifier">can_use_anchor</span><span class="Operator">*</span><span class="Other">:</span> <span class="Identifier">bool</span>
@@ -666,7 +666,7 @@ This used in childs of the NodeObj.
       <div class="twelve-columns footer">
         <span class="nim-sprite"></span>
         <br/>
-        <small style="color: var(--hint);">Made with Nim. Generated: 2020-06-08 05:38:59 UTC</small>
+        <small style="color: var(--hint);">Made with Nim. Generated: 2020-06-08 07:53:29 UTC</small>
       </div>
     </div>
   </div>
